# ds-oop

./: .gitignore  README.md  pyproject.toml
loggingconf/: loggingconf.json
src/titanic_data/: __main__.py  titanic_data.py
src/utils/: ml_utils.py
tests/titanic_data/: conftest.py  test_titanic_data.py
