[project]
name = "ds-oop"
version = "0.1.0"
description = "demonstrate OOP in data science"
authors = [
    {name = "redtea"}
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "scikit-learn>=1.4.2",
    "DeepDiff>=7.0.1",
    "seaborn>=0.13.2",
    "pytest>=8.2.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
